Quelques modif dans Link